# home-central

./: .gitignore  claude.md  todo.md
agents/: backend-engineer.md  ui-ux-engineer.md
backend/: .env.example  conftest.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  supabase_client.py
backend/app/features/auth/: router.py
backend/app/features/projects/: models.py  router.py  test_projects.py
backend/app/routers/: auth.py
backend/app/shared/: dependencies.py
backend/tests/: conftest.py  test_auth.py
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/app/features/auth/composables/: useAuth.ts
frontend/app/features/auth/tests/: useAuth.test.ts
frontend/app/layouts/: default.vue
frontend/app/middleware/: auth.ts
frontend/app/pages/: dashboard.vue  login.vue  signup.vue
frontend/tests/: useAuth.test.ts
supabase/migrations/: 001_create_projects_table.sql
